[tool.poetry]
name = "videointerpolation"
version = "0.1.0"
description = "A simple package for running frames interpolation given an input video."
authors = ["Mostafa Elsaadouny <m.a.mostafa@ieee.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0.66"
torch = "^2.0.1"
torchvision = "^0.15.2"
tqdm = "^4.64.0"
clip = {git = "https://github.com/openai/CLIP.git", rev = "a1d071733d7111c9c014f024669f959182114e33"}
pre-commit = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
